# buildOS

./: .dockerignore  .env.example  .gitignore  CLEANUP_ANALYSIS.md  DEPLOYMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.backend.local  Dockerfile.frontend  Dockerfile.frontend.local  FILE_UPLOAD_DEBUG_SUMMARY.md  Ifcviewer.md  LOGGING_ARCHITECTURE.md  LOGGING_QUICKSTART.md  OBSERVABILITY.md  OBSERVABILITY_COMPLETE.md  OBSERVABILITY_QUICKSTART.md  OBSERVABILITY_USAGE.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY_OLD.md  QUICKSTART.md  QUICK_DEBUG_GUIDE.md  README.md  README_INTERACTIVE.md  RUN_WITH_CLAUDE.md  SESSION_CONTEXT.md  TEST_PLAN.md  analyze_logs.py  conversation_logger.py  csvagent.md  docker-compose.production.yml  docker-compose.yml  docker-entrypoint.sh  docker-start.sh  dokploy.yml  ifc_comprehensive_parser.py  interactive_buildos.py  load_env.py  nginx.conf  nginx.local.conf  (+19 more)
.claude/: settings.json  settings.local.json
custom_tools/: __init__.py  loader.py  server.py
docs/: DEBUG_FILE_UPLOAD.md  DOCKER_SERVICES.md  ENHANCED_LOGGING_SUMMARY.md  FILE_UPLOAD_BUG_FIX.md  IMPLEMENTATION_CHECKLIST.md  LOG_ANALYSIS_GUIDE.md  ORCHESTRATION_ARCHITECTURE.md  SESSION_ISOLATION_ANALYSIS.md  SHARING_GUIDE.md
workspace/: build_co2_report.py  calculate_co2_report.py  direct_report.py  execute_co2.py  execute_inline.py  final_co2_calculation.py  gen_report.py  generate_report.py  generate_report_now.py  generate_sustainability_report.py  ifc_parsed.json  inline_calculation.py  parsed_ifc.json  parsed_test.json  run_calculation.py  run_co2_calc.sh  run_report.py  (+1 more)
(+74 files in other folders)
