[project]
name = "bimai-co2-analysis"
version = "0.1.0"
description = "BIM AI CO2 Analysis System - Automated environmental impact analysis for BIM models"
authors = [
    {name = "Stefan Daniels", email = "stefan@bimai.nl"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "ifcopenshell>=0.7.0",
    "anthropic>=0.18.0",
    "pandas>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
